--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -82,10 +82,10 @@ jobs:
             # cmake_flags:
             # This env runs valgrind
 
-          - os: ubuntu-20.04
-            c: gcc-10
-            cxx: g++-10
-            name: Ubuntu 20.04 GCC 10
+          - #os: ubuntu-20.04
+            #c: gcc-10
+            #cxx: g++-10
+            #name: Ubuntu 20.04 GCC 10
             # cmake_flags:
             # This env is for older glibc
 
